add item quantity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Jump</string>
+    <string name="title_activity_vendor_config">VendorConfig</string>
 </resources>
