--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Jump</string>
     <string name="title_activity_vendor_config">VendorConfig</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
